--- a/_modules/torchcvnn/nn/modules/batchnorm.html
+++ b/_modules/torchcvnn/nn/modules/batchnorm.html
@@ -5,7 +5,7 @@
     <meta name="color-scheme" content="light dark"><link rel="index" title="Index" href="../../../../genindex.html" /><link rel="search" title="Search" href="../../../../search.html" />
 
     <!-- Generated with Sphinx 8.1.3 and Furo 2024.08.06 -->
-        <title>torchcvnn.nn.modules.batchnorm - torchcvnn 0.9.4 documentation</title>
+        <title>torchcvnn.nn.modules.batchnorm - torchcvnn 0.9.3 documentation</title>
       <link rel="stylesheet" type="text/css" href="../../../../_static/pygments.css?v=8f2a1f02" />
     <link rel="stylesheet" type="text/css" href="../../../../_static/styles/furo.css?v=354aac6f" />
     <link rel="stylesheet" type="text/css" href="../../../../_static/copybutton.css?v=76b2166b" />
@@ -166,7 +166,7 @@
       </label>
     </div>
     <div class="header-center">
-      <a href="../../../../index.html"><div class="brand">torchcvnn 0.9.4 documentation</div></a>
+      <a href="../../../../index.html"><div class="brand">torchcvnn 0.9.3 documentation</div></a>
     </div>
     <div class="header-right">
       <div class="theme-toggle-container theme-toggle-header">
@@ -190,7 +190,7 @@
       <div class="sidebar-sticky"><a class="sidebar-brand" href="../../../../index.html">
   
   
-  <span class="sidebar-brand-text">torchcvnn 0.9.4 documentation</span>
+  <span class="sidebar-brand-text">torchcvnn 0.9.3 documentation</span>
   
 </a><form class="sidebar-search-container" method="get" action="../../../../search.html" role="search">
   <input class="sidebar-search" placeholder="Search" name="q" aria-label="Search">
@@ -547,7 +547,7 @@
             <span class="c1"># Or for testing but using the batch stats for centering/scaling</span>
 
             <span class="c1"># Compute the means</span>
-            <span class="n">mus</span> <span class="o">=</span> <span class="n">xc</span><span class="o">.</span><span class="n">mean</span><span class="p">(</span><span class="n">axis</span><span class="o">=-</span><span class="mi">1</span><span class="p">)</span>  <span class="c1"># num_features means</span>
+            <span class="n">mus</span> <span class="o">=</span> <span class="n">xc</span><span class="o">.</span><span class="n">mean</span><span class="p">(</span><span class="o">-</span><span class="mi">1</span><span class="p">)</span>  <span class="c1"># num_features means</span>
 
             <span class="c1"># Center the xc</span>
             <span class="n">xc_centered</span> <span class="o">=</span> <span class="n">xc</span> <span class="o">-</span> <span class="n">mus</span><span class="o">.</span><span class="n">unsqueeze</span><span class="p">(</span><span class="o">-</span><span class="mi">1</span><span class="p">)</span>  <span class="c1"># num_features, BxHxW</span>
@@ -576,7 +576,6 @@
         <span class="c1"># So that the batch matrix multiply works as expected</span>
         <span class="c1"># where invsqrt_covs is (C, 2, 2)</span>
         <span class="n">outz</span> <span class="o">=</span> <span class="n">torch</span><span class="o">.</span><span class="n">bmm</span><span class="p">(</span><span class="n">invsqrt_covs</span><span class="p">,</span> <span class="n">xc_centered</span><span class="o">.</span><span class="n">transpose</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="mi">2</span><span class="p">))</span>
-        <span class="n">outz</span> <span class="o">=</span> <span class="n">outz</span><span class="o">.</span><span class="n">contiguous</span><span class="p">()</span>  <span class="c1"># num_features, 2, BxHxW</span>
 
         <span class="c1"># Shift by beta and scale by gamma</span>
         <span class="c1"># weight is (num_features, 2, 2) real valued</span>
@@ -695,7 +694,7 @@
       
     </aside>
   </div>
-</div><script src="../../../../_static/documentation_options.js?v=c5ca06ca"></script>
+</div><script src="../../../../_static/documentation_options.js?v=0e439607"></script>
     <script src="../../../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../../../../_static/scripts/furo.js?v=5fa4622c"></script>
